fixed login / register input - btn alignment

--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -10,7 +10,7 @@ button { width: 100%; }
   margin-bottom: 10px;
   height: 20px;
   line-height: 20px;
-  width: 100%;
+  width: 94%;
   color: #F00;
   text-align: center;
   font-size: 14px;
@@ -62,6 +62,7 @@ button { width: 100%; }
 }
 
 .rptTitle {
+  width: 94%;
   text-align:center;
   font-size:20px;
   font-weight: bold;
@@ -69,7 +70,10 @@ button { width: 100%; }
 }
 
 .topMargin {
-  margin-top: 70px;
+  margin-top: 120px;
+  height: auto;
+  width: 100%;
+  overflow: hidden;
 }
 
 .regBtnMouseUp {
@@ -83,8 +87,9 @@ button { width: 100%; }
   width: 95%;
   height: 85%;
   margin-left: 4px;
-  font-size: 12px;
+  font-size: 11px;
   line-height: 50%;
+  margin-top: 1.5px;
 }
 
 .logInBtnMouseUp {
@@ -98,8 +103,26 @@ button { width: 100%; }
   width: 95%;
   height: 85%;
   line-height: 50%;
-  font-size: 12px;
+  font-size: 11px;
   margin-left: 4px;
+  margin-top: 1.5px;
+}
+
+.width-95 {
+  width: 95%
+}
+
+.inptCon {
+  width: 100%;
+  margin: 0 auto;
+}
+
+.btnCon {
+  width: 100%;
+}
+
+.btnConW-95 {
+  width: 95%;
 }
 
 @media (max-width: 1301px){
@@ -120,16 +143,38 @@ button { width: 100%; }
 }
 
 @media (max-width: 600px){
-  .topMargin { margin-top: 40px; }
+  .topMargin { margin-top: 80px; }
   .spc_Logo {
     width: 70%;
     height: 70%;
   }
+
+  .width-95 {
+    margin: 0 auto;
+  }
+
+  .loginError {
+    margin: 0 auto;
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+
+  .rptTitle {
+    margin: 0 auto;
+  }
+
+  .btnConW-95 {
+    margin: 0 auto;
+  }
+}
+
+.h-40 {
+  height: 40px;
 }
 
 @media (max-width: 501px){
-  .topMargin { margin-top: 0px; }
-  .divCard { width: 100%; margin-bottom: 0px; }
+  .topMargin { margin-top: 20px; }
+  .divCard { height: 100%; width: 100%; margin-bottom: 0px; border: none; }
 }
 
 @mixin bg-opacity($color, $opacity) {
